--- a/www/style.css
+++ b/www/style.css
@@ -1,16 +1,6 @@
 body{
 	font-family: Arial;
-    width: 600px;
-}
-
-.section {
-    border: 4px solid #f1f1f1;
-    text-align: left;
-    width: 450px;
-    padding: 10px;
-    margin-left: 50px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    width: 750px;
 }
 
 button#submit {
@@ -53,18 +43,43 @@ h3 {
     font-size: 16px;
 }
 
-   font-family: Arial;
-}
-
 .section {
-    border: 4px solid #f1f1f1;
+    border: 4px solid #7d4646;
     text-align: left;
-    width: 450px;
+    width: 610px;
     padding: 10px;
     margin-left: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+.section elem{
+	display: inline-block;
+	color: #7d4646; 
+	font-size: 18px;
+	width: 200px;
+}
+
+.section filetag {
+	display: inline-block;
+	color: #7d4646; 
+	font-size: 18px;
+	width: 40px;
+}
+
+.section date{
+	font-size: 12px;
+}
+
+.section refs{
+	display: inline-block;
+	width: 140px;
+}
+
+.section ref{
+	font-size: 12px;
+}
+
 
 button#submit {
     margin-left: 50px;
@@ -106,18 +121,6 @@ h3 {
     font-size: 16px;
 }
 
-   font-family: Arial;
-}
-
-.section {
-    border: 4px solid #f1f1f1;
-    text-align: left;
-    width: 450px;
-    padding: 10px;
-    margin-left: 50px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 
 button#submit {
     margin-left: 50px;
