--- a/www/style.css
+++ b/www/style.css
@@ -121,6 +121,32 @@ h3 {
 	padding-left: 20px;
 }
 
+.section select {
+	font-size: 12px;
+}
+
+.section p#mtype {
+	margin: 2px;
+	padding-left: 30px;
+	font-size: 12px;
+}
+
+.section pre {
+	margin-top: 0px;
+}
+
+.section h4 {
+    padding: 0px;
+    margin: 0px;
+    font-family: Arial;
+}
+
+.section p#suggest {
+	margin-top: 12px;
+	margin-bottom: 10px;
+	margin-left: 20px;
+	font-size: 12px;
+}
 
 button#submit {
     margin-left: 50px;
@@ -137,11 +163,6 @@ label {
     width: 150px;
 }
 
-label, input, p#ra {
-    margin: 3px;
-    font-size: 12px;
-}
-
 .header {
     background: black;
     color: white;
@@ -149,7 +170,6 @@ label, input, p#ra {
 }
 
 
-h1 
 
 h3 {
     padding: 0px;
@@ -173,11 +193,6 @@ label {
     display: block;
     float: left;
     width: 150px;
-}
-
-label, input, p#ra {
-    margin: 3px;
-    font-size: 12px;
 }
 
 .header {
@@ -198,12 +213,6 @@ h3 {
     margin-left: 30px;
     margin-top: 30px;
     font-size: 16px;
-}
-h4 {
-    padding: 0px;
-    margin: 0px;
-    margin-bottom: 8px;
-    font-family: Arial;
 }
 
 label {
