--- a/www/style.css
+++ b/www/style.css
@@ -1,13 +1,14 @@
 body{
 	font-family: Arial;
     width: 750px;
+	background: #F2F3F4;
 }
 
 
 div.navmenu  {
 	display: block;
 	height: 20px;
-	background: navajowhite;
+	background: grey;
 	padding: 5px;
 	margin: 2px;
 }
@@ -18,10 +19,12 @@ div.navmenu  {
 }
 
 .navmenu ul {
+	color: white;
 	padding: 0px;
 	margin: 0px;
 }
 .navmenu li {
+	color: white;
 	display: inline;
 	float: left;
 	margin-left: 5px;
@@ -33,6 +36,7 @@ div.navmenu  {
 }
 
 .navmenu a {
+	color: white;
 	display: block;
 	width: 100px;
 }
@@ -58,9 +62,8 @@ label, input, p#ra, p#rg, p#out {
 }
 
 .header {
-    background: black;
+	background: white;
     color: white;
-    padding-bottom: 6px;
 }
 
 
@@ -79,7 +82,7 @@ h3 {
 
 
 .section {
-    border: 4px solid #7d4646;
+    border: 2px solid grey;
     text-align: left;
     width: 610px;
     padding: 10px;
@@ -176,9 +179,8 @@ label {
 }
 
 .header {
-    background: black;
+    background: white;
     color: white;
-    padding-bottom: 6px;
 }
 
 
@@ -207,11 +209,6 @@ label {
     width: 150px;
 }
 
-.header {
-    background: black;
-    color: white;
-    padding-bottom: 6px;
-}
 
 
 h1 {
